--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "filetransfer",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "dev": "nodemon server.js",
-    "start": "node server.js",
-    "serve": "node server.js"
+    "dev": "nodemon server",
+    "start": "node server",
+    "serve": "node server"
   },
   "keywords": [],
   "author": "",
